Prevent webkit adjusting size on mobile

--- a/less/base.less
+++ b/less/base.less
@@ -13,6 +13,7 @@ body {
     box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
     margin: 0 auto;
     overflow: hidden;
+    -webkit-text-size-adjust: none;
 }
 
 // Courtesy of https://make.wordpress.org/accessibility/handbook/markup/the-css-class-screen-reader-text/.
